@@ -1,3 +1,9 @@
+2003-12-15  Dmitry Semyonov  <Dmitry.Semyonov@oktet.ru>
+	    Nick Clifton  <nickc@redhat.com>
+
+	* peXXigen.c (_bfd_XXi_swap_scnhdr_out): Ensure that correct flags
+	are set on known section types.
+	
 2003-12-12  Nick Clifton  <nickc@redhat.com>
 
 	* po/ro.po: Updated translation.
